front end changes

--- a/client/src/components/_textEditor.scss
+++ b/client/src/components/_textEditor.scss
@@ -7,4 +7,8 @@
       border-right: none;
       border-bottom: none;
     }
+    .ql-tooltip.ql-editing {
+        top: 28.5px !important;
+        left: 0px !important
+    }
   }
