--- a/client/src/components/_textEditor.scss
+++ b/client/src/components/_textEditor.scss
@@ -12,3 +12,10 @@
         left: 0px !important
     }
   }
+
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
