--- a/client/src/components/_textEditor.scss
+++ b/client/src/components/_textEditor.scss
@@ -13,6 +13,31 @@
     }
   }
 
+p {
+    white-space: pre-wrap;
+} 
+
+textarea {
+    background: url(http://i.imgur.com/2cOaJ.png);
+    background-attachment: local;
+    background-repeat: no-repeat;
+    padding-left: 35px;
+    padding-top: 10px;
+    border-color: #ccc;
+  
+    font-size: 13px;
+    line-height: 16px;
+    width: 100vw;
+  }
+
+  .textarea-wrapper {
+    display: inline-block;
+    background-image: linear-gradient(#F1F1F1 50%, #F9F9F9 50%);
+    background-size: 100% 32px;
+    background-position: left 10px;
+  }
+
+
 button:disabled,
 button[disabled]{
   border: 1px solid #999999;
