--- a/client/src/components/_textEditor.scss
+++ b/client/src/components/_textEditor.scss
@@ -1,3 +1,4 @@
+
 .quill.ql-error {
     .ql-toolbar {
       border: none;
@@ -11,43 +12,58 @@
         top: 28.5px !important;
         left: 0px !important
     }
+    .ql-editor {
+      counter-reset: line;
+      padding-left: 0;
+    }
+    .ql-editor p:before {
+      counter-increment: line;
+      content: counter(line);
+      /* display: inline-block; */
+      /* border-right: 1px solid #ddd; */
+      /* padding: 0 0.5em; */
+      margin-right: 0.5em;
+      color: #888
+    }
+    .ql-editor.ql-blank::before{
+      color: white
+    }
   }
+  // put each span on its own line, dont want this on indivital character changes
+  // pre span {
+  //   display: block;
+  // }
 
-p {
-    white-space: pre-wrap;
-} 
-
-.lineNum {
-  counter-reset: line;
-}
-
-.lineNum:before {
+  pre:before {
     counter-increment: line;
     content: counter(line);
-    display: inline-block;
-    margin-right: .5em;
-}
-
-
-textarea {
-    background: url(http://i.imgur.com/2cOaJ.png);
-    background-attachment: local;
-    background-repeat: no-repeat;
-    padding-left: 35px;
-    padding-top: 10px;
-    border-color: #ccc;
-    font-size: 13px;
-    line-height: 16px;
-    width: 100vw;
+    /* border-right: 1px solid #ddd; */
+    /* padding: 0.1em; */
+    margin-right: 0.2em;
+    color: #888
   }
 
-  .textarea-wrapper {
-    display: inline-block;
-    background-image: linear-gradient(#F1F1F1 50%, #F9F9F9 50%);
-    background-size: 100% 32px;
-    background-position: left 10px;
+  pre {
+    background: #303030;
+    color: #f1f1f1;
+    padding: 10px 16px;
+    border-radius: 2px;
+    border-top: 4px solid #00aeef;
+    -moz-box-shadow: inset 0 0 10px #000;
+    box-shadow: inset 0 0 10px #000;
+    counter-reset: line;
   }
+  // textarea{
+  //   background: url(http://i.imgur.com/2cOaJ.png);
+  //   background-attachment: local;
+  //   background-repeat: no-repeat;
+  //   padding-left: 35px;
+  //   padding-top: 10px;
+  //   border-color:#ccc;
+  //   font-size: 14px;//add the style
+  //   }
 
+  // https://stackoverflow.com/questions/4147080/can-i-wrap-each-line-of-multi-line-text-in-a-span
 
 button:disabled,
 button[disabled]{
